--- a/angular/views/login.html
+++ b/angular/views/login.html
@@ -8,6 +8,6 @@
   </form>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+  <button class="btn btn-primary" type="button" ng-click="login()">Login</button>
   <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
 </div>
