--- a/angular/views/login.html
+++ b/angular/views/login.html
@@ -1,5 +1,6 @@
 <div class="modal-header">
   <h2 class="form-signin-heading">Please sign in</h2>
+  <h2 ng-if="errorMessage" class="warning">{{errorMessage}}</h2>
 </div>
 <div class="modal-body">
   <form class="form-signin">
