--- a/angular/styles/app.scss
+++ b/angular/styles/app.scss
@@ -1,236 +1,114 @@
-/* custom template */
-html, body {
-   height: 100%;
-   font-family:verdana,arial,sans-serif;
-   color:#555555;
-}
-
-.nav {
-   font-family:Arial,sans-serif;
-   font-size:13px;
-}
-
-a {
-  color:#222222;
-}
-
-a:hover {
-  text-decoration:none;
-}
-
-hr {
-  border-color:#dedede;
-}
-
-.wrapper, .row {
-   height: 100%;
-   margin-left:0;
-   margin-right:0;
-}
-
-.wrapper:before, .wrapper:after,
-.column:before, .column:after {
-    content: "";
-    display: table;
-}
-
-.wrapper:after,
-.column:after {
-    clear: both;
-}
-
-.column {
-    height: 100%;
-    overflow: auto;
-    *zoom:1;
-}
-
-.column .padding {
-    padding: 20px;
-}
-
-.full{
-  padding-top:70px;
-}
-
-.box {
-    bottom: 0; /* increase for footer use */
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    background-color:#444444;
-  /*
-    background-image:url('/assets/example/bg_suburb.jpg');
-    background-size:cover;
-    background-attachment:fixed;
-  */
-}
-
-.divider {
-  margin-top:32px;
-}
-
-.navbar-blue {
-    border-width:0;
-  background-color:#3B5999;
-    color:#ffffff;
-    font-family:arial,sans-serif;
-    top:0;
-    position:fixed;
-    width:inherit;
-}
-
-.navbar-blue li > a,.navbar-toggle  {
-   color:#efefef;
-}
-
-.navbar-blue .dropdown-menu li a {color:#2A4888;}
-.navbar-blue .dropdown-menu li > a {padding-left:30px;}
-
-.navbar-blue li>a:hover, .navbar-blue li>a:focus, .navbar-blue .open, .navbar-blue .open>a, .navbar-blue .open>a:hover, .navbar-blue .open>a:focus {
-   background-color:#2A4888;
-   color:#fff;
-}
-
-#main {
-   background-color:#e9eaed;
-   padding-left:0;
-   padding-right:0;
-}
-#main .img-circle {
-   margin-top:18px;
-   height:70px;
-   width:70px;
-}
-
+// logo
 .logo {
-  display:block;
-  padding:3px;
-  background-color:#fff;
-  color:#3B5999;
-  height:28px;
-  width:28px;
-  margin:9px;
-  margin-right:2px;
-  margin-left:15px;
-  font-size:20px;
-  font-weight:700;
-  text-align:center;
-  text-decoration:none;
-  text-shadow:0 0 1px;
-  border-radius:2px;
-}
-#footer {
-  margin-bottom:20px;
+  margin-top: -15px;
+  height: 50px;
 }
 
-/* bootstrap overrides */
-
-h1,h2,h3 {
-   font-weight:800;
+// Navigation bar
+.navbar {
+  min-height: 70px;
+  padding-top: 10px;
+  margin-bottom: 0px;
 }
 
-.navbar-toggle, .close {
-  outline:0;
+.navbar-brand {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 900;
 }
 
-.navbar-toggle .icon-bar {
-  background-color: #fff;
+.navbar-header .navbar-brand {
+  color: white;
 }
 
-.btn-primary,.label-primary,.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus  {
-  background-color:#3B5999;
-    color:#fffffe;
-}
-.btn-default {
-    color:#666666;
-    text-shadow:0 0 1px rgba(0,0,0,.3);
-}
-.form-control {
-  
+.navbar-default .navbar-nav > li > a {
+  color: white;
+  font-weight: 700;
+  font-size: 12px;
 }
 
-.panel textarea, .well textarea, textarea.form-control
-{
-   resize: none;
-}
-  
-.badge{
-   color:#3B5999;
-   background-color:#fff;
-}
-.badge:hover, .badge-inverse{
-   background-color:#3B5999;
-   color:#fff;
-}
-    
-.jumbotron {
-  background-color:transparent;
-}
-.label-default {
-  background-color:#dddddd;
-}
-.page-header {
-  margin-top: 55px;
-  padding-top: 9px;
-  border-top:1px solid #eeeeee;
-  font-weight:700;
-  text-transform:uppercase;
-  letter-spacing:2px;
+.navbar-default .navbar-nav > li > a:hover {
+  color: #00b3fe;
 }
 
-.panel-default .panel-heading {
-  background-color:#f9fafb;
-  color:#555555;
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: #00b3fe;
+  background-color: transparent;
 }
 
-.col-sm-9.full {
-    width: 100%;
+.navbar-default {
+  background-color: #384452;
+  border-color: transparent;
 }
 
-.modal-header, .modal-footer {
-  background-color:#f2f2f2;
-    font-weight:800;
-    font-size:12px;
+.dropdown-menu {
+  background: #384452;
 }
 
-.modal-footer i, .well i {
-    font-size:20px;
-    color:#c0c0c0;
+.dropdown-menu > li > a {
+  color: white;
+  font-weight: 700;
+  font-size: 12px;
 }
 
-.modal-body {
-  padding:0px;
+.open .dropdown-toggle.btn-theme {
+  color: #fff;
+  background-color: #00b3fe;
+  border-color: #00b3fe;
 }
 
-.modal-body textarea.form-control
-{
-   resize: none;
-   border:0;
-   box-shadow:0 0 0;
+
+/*  ################################################################
+  SITE WRAPS
+################################################################# */
+
+#headerwrap {
+  background-color: #00b3fe;
+  min-height: 550px;
+  padding-top: 100px;
+  padding-bottom: 0px;
+  text-align: center;
 }
 
-small.text-muted {
-  font-family:courier,courier-new,monospace;
+#headerwrap h3,
+h5 {
+  color: white;
+  font-weight: 400;
 }
 
-/* adjust the contents on smaller devices */
-@media (max-width: 768px) {
+#headerwrap h1 {
+  color: white;
+  margin-bottom: 25px;
+}
 
-  .column .padding {
-    padding: 7px;
-  }
+#headerwrap .img-responsive {
+  margin: 0 auto;
+}
 
-  .full{
-  padding-top:20px;
-  }
 
-  .navbar-blue {
-  background-color:#3B5999;
-    top:0;
-    width:100%;
-    position:relative;
-  }
+/* Footer */
 
+#footerwrap {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #384452;
+}
+
+#footerwrap p {
+  color: #bfc9d3;
+}
+
+#footerwrap h4 {
+  color: white;
+}
+
+#footerwrap i {
+  font-size: 30px;
+  color: #bfc9d3;
+  padding-right: 25px;
+}
+
+#footerwrap i:hover {
+  color: #00b3fe
 }
