--- a/angular/views/main.html
+++ b/angular/views/main.html
@@ -1,236 +1,90 @@
-<div class="wrapper">
-  <div class="box">
-    <div class="row row-offcanvas row-offcanvas-left">
-      <!-- main right col -->
-      <div class="column col-sm-12 col-xs-12" id="main">
-        <!-- top nav -->
-        <div class="navbar navbar-blue navbar-static-top">
-          <div class="navbar-header">
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a href="/" class="navbar-brand logo">b</a>
-          </div>
-          <nav class="collapse navbar-collapse" role="navigation">
-            <form class="navbar-form navbar-left">
-              <div class="input-group input-group-sm" style="max-width:360px;">
-                <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
-                <div class="input-group-btn">
-                  <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                </div>
-              </div>
-            </form>
-            <ul class="nav navbar-nav">
-              <li>
-                <a href="#"><i class="glyphicon glyphicon-home"></i> Home</a>
-              </li>
-              <li>
-                <a href="#postModal" role="button" data-toggle="modal"><i class="glyphicon glyphicon-plus"></i> Post</a>
-              </li>
-              <li>
-                <a href="#"><span class="badge">badge</span></a>
-              </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i></a>
-                <ul class="dropdown-menu">
-                  <li><a href="">More</a></li>
-                  <li><a href="">More</a></li>
-                  <li><a href="">More</a></li>
-                  <li><a href="">More</a></li>
-                  <li><a href="">More</a></li>
-                </ul>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <!-- /top nav -->
-        <div class="padding">
-          <div class="full col-sm-9">
-            <!-- content -->
-            <div class="row">
-              <!-- main col left -->
-              <div class="col-sm-5">
-                <div class="panel panel-default">
-                  <div class="panel-thumbnail"><img src="/assets/example/bg_5.jpg" class="img-responsive"></div>
-                  <div class="panel-body">
-                    <p class="lead">Urbanization</p>
-                    <p>45 Followers, 13 Posts</p>
-                    <p>
-                      <img src="https://lh3.googleusercontent.com/uFp_tsTJboUY7kue5XAsGA=s28" width="28px" height="28px">
-                    </p>
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading"><a href="#" class="pull-right">View all</a>
-                    <h4>Bootstrap Examples</h4></div>
-                  <div class="panel-body">
-                    <div class="list-group">
-                      <a href="http://bootply.com/tagged/modal" class="list-group-item">Modal / Dialog</a>
-                      <a href="http://bootply.com/tagged/datetime" class="list-group-item">Datetime Examples</a>
-                      <a href="http://bootply.com/tagged/datatable" class="list-group-item">Data Grids</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="well">
-                  <form class="form-horizontal" role="form">
-                    <h4>What's New</h4>
-                    <div class="form-group" style="padding:14px;">
-                      <textarea class="form-control" placeholder="Update your status"></textarea>
-                    </div>
-                    <button class="btn btn-primary pull-right" type="button">Post</button>
-                    <ul class="list-inline">
-                      <li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li>
-                      <li><a href=""><i class="glyphicon glyphicon-camera"></i></a></li>
-                      <li><a href=""><i class="glyphicon glyphicon-map-marker"></i></a></li>
-                    </ul>
-                  </form>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading"><a href="#" class="pull-right">View all</a>
-                    <h4>More Templates</h4></div>
-                  <div class="panel-body">
-                    <img src="//placehold.it/150x150" class="img-circle pull-right"> <a href="#">Free @Bootply</a>
-                    <div class="clearfix"></div>
-                    There a load of new free Bootstrap 3 ready templates at Bootply. All of these templates are free and don't require extensive customization to the Bootstrap baseline.
-                    <hr>
-                    <ul class="list-unstyled">
-                      <li><a href="http://www.bootply.com/templates">Dashboard</a></li>
-                      <li><a href="http://www.bootply.com/templates">Darkside</a></li>
-                      <li><a href="http://www.bootply.com/templates">Greenfield</a></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>What Is Bootstrap?</h4></div>
-                  <div class="panel-body">
-                    Bootstrap is front end frameworkto build custom web applications that are fast, responsive &amp; intuitive. It consist of CSS and HTML for typography, forms, buttons, tables, grids, and navigation along with custom-built jQuery plug-ins and support for responsive layouts. With dozens of reusable components for navigation, pagination, labels, alerts etc.. </div>
-                </div>
-              </div>
-              <!-- main col right -->
-              <div class="col-sm-7">
-                <div class="well">
-                  <form class="form">
-                    <h4>Sign-up</h4>
-                    <div class="input-group text-center">
-                      <input type="text" class="form-control input-lg" placeholder="Enter your email address">
-                      <span class="input-group-btn"><button class="btn btn-lg btn-primary" type="button">OK</button></span>
-                    </div>
-                  </form>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading"><a href="#" class="pull-right">View all</a>
-                    <h4>Bootply Editor &amp; Code Library</h4></div>
-                  <div class="panel-body">
-                    <p><img src="//placehold.it/150x150" class="img-circle pull-right"> <a href="#">The Bootstrap Playground</a></p>
-                    <div class="clearfix"></div>
-                    <hr> Design, build, test, and prototype using Bootstrap in real-time from your Web browser. Bootply combines the power of hand-coded HTML, CSS and JavaScript with the benefits of responsive design using Bootstrap. Find and showcase Bootstrap-ready snippets in the 100% free Bootply.com code repository.
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading"><a href="#" class="pull-right">View all</a>
-                    <h4>Stackoverflow</h4></div>
-                  <div class="panel-body">
-                    <img src="//placehold.it/150x150" class="img-circle pull-right"> <a href="#">Keyword: Bootstrap</a>
-                    <div class="clearfix"></div>
-                    <hr>
-                    <p>If you're looking for help with Bootstrap code, the <code>twitter-bootstrap</code> tag at <a href="http://stackoverflow.com/questions/tagged/twitter-bootstrap">Stackoverflow</a> is a good place to find answers.</p>
-                    <hr>
-                    <form>
-                      <div class="input-group">
-                        <div class="input-group-btn">
-                          <button class="btn btn-default">+1</button>
-                          <button class="btn btn-default"><i class="glyphicon glyphicon-share"></i></button>
-                        </div>
-                        <input type="text" class="form-control" placeholder="Add a comment..">
-                      </div>
-                    </form>
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading"><a href="#" class="pull-right">View all</a>
-                    <h4>Portlet Heading</h4></div>
-                  <div class="panel-body">
-                    <ul class="list-group">
-                      <li class="list-group-item">Modals</li>
-                      <li class="list-group-item">Sliders / Carousel</li>
-                      <li class="list-group-item">Thumbnails</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-thumbnail"><img src="/assets/example/bg_4.jpg" class="img-responsive"></div>
-                  <div class="panel-body">
-                    <p class="lead">Social Good</p>
-                    <p>1,200 Followers, 83 Posts</p>
-                    <p>
-                      <img src="https://lh6.googleusercontent.com/-5cTTMHjjnzs/AAAAAAAAAAI/AAAAAAAAAFk/vgza68M4p2s/s28-c-k-no/photo.jpg" width="28px" height="28px">
-                      <img src="https://lh4.googleusercontent.com/-6aFMDiaLg5M/AAAAAAAAAAI/AAAAAAAABdM/XjnG8z60Ug0/s28-c-k-no/photo.jpg" width="28px" height="28px">
-                      <img src="https://lh4.googleusercontent.com/-9Yw2jNffJlE/AAAAAAAAAAI/AAAAAAAAAAA/u3WcFXvK-g8/s28-c-k-no/photo.jpg" width="28px" height="28px">
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!--/row-->
-            <div class="row">
-              <div class="col-sm-6">
-                <a href="#">Twitter</a> <small class="text-muted">|</small> <a href="#">Facebook</a> <small class="text-muted">|</small> <a href="#">Google+</a>
-              </div>
-            </div>
-            <div class="row" id="footer">
-              <div class="col-sm-6">
-              </div>
-              <div class="col-sm-6">
-                <p>
-                  <a href="#" class="pull-right">©Copyright 2013</a>
-                </p>
-              </div>
-            </div>
-            <hr>
-            <h4 class="text-center">
-                      <a href="http://bootply.com/96266" target="ext">Download this Template @Bootply</a>
-                      </h4>
-            <hr>
-          </div>
-          <!-- /col-9 -->
-        </div>
-        <!-- /padding -->
-      </div>
-      <!-- /main -->
+<!-- Fixed navbar -->
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="index.html"><img class="logo" src="/images/logo.png"></a>
     </div>
-  </div>
-</div>
-<!--post modal-->
-<div id="postModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        Update Status
-      </div>
-      <div class="modal-body">
-        <form class="form center-block">
-          <div class="form-group">
-            <textarea class="form-control input-lg" autofocus="" placeholder="What do you want to share?"></textarea>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <div>
-          <button class="btn btn-primary btn-sm" data-dismiss="modal" aria-hidden="true">Post</button>
-          <ul class="pull-left list-inline">
-            <li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li>
-            <li><a href=""><i class="glyphicon glyphicon-camera"></i></a></li>
-            <li><a href=""><i class="glyphicon glyphicon-map-marker"></i></a></li>
+    <div class="navbar-collapse collapse navbar-right">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+        <li class="dropdown" ng-class="{'open': isActive}" ng-click="activeButton()">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="blog.html">BLOG</a></li>
+            <li><a href="single-post.html">SINGLE POST</a></li>
+            <li><a href="portfolio.html">PORTFOLIO</a></li>
+            <li><a href="single-project.html">SINGLE PROJECT</a></li>
           </ul>
-        </div>
-      </div>
+        </li>
+      </ul>
     </div>
+    <!--/.nav-collapse -->
   </div>
 </div>
+
+<div id="headerwrap">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h3>Show your work with this beautiful theme</h3>
+        <h1>Eyecatching Bootstrap 3 Theme.</h1>
+        <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h5>
+        <h5>More Lorem Ipsum added here too.</h5>
+      </div>
+      <div class="col-lg-8 col-lg-offset-2 himg">
+        <img src="assets/img/browser.png" class="img-responsive">
+      </div>
+    </div>
+    <!-- /row -->
+  </div>
+  <!-- /container -->
+</div>
+<!-- /headerwrap -->
+
+
+<!-- *****************************************************************************************************************
+	 FOOTER
+	 ***************************************************************************************************************** -->
+<div id="footerwrap">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4">
+        <h4>About</h4>
+        <div class="hline-w"></div>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+      </div>
+      <div class="col-lg-4">
+        <h4>Social Links</h4>
+        <div class="hline-w"></div>
+        <p>
+          <a href="#"><i class="fa fa-dribbble"></i></a>
+          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+          <a href="#"><i class="fa fa-tumblr"></i></a>
+        </p>
+      </div>
+      <div class="col-lg-4">
+        <h4>Our Bunker</h4>
+        <div class="hline-w"></div>
+        <p>
+          Some Ave, 987,
+          <br/> 23890, New York,
+          <br/> United States.
+          <br/>
+        </p>
+      </div>
+    </div>
+    <!--row -->
+  </div>
+  <!-- container -->
+</div>
+<!-- footerwrap -->
