--- a/angular/styles/app.scss
+++ b/angular/styles/app.scss
@@ -1,3 +1,13 @@
+// normalize
+.clearfix,
+.container,
+.container-fluid,
+.row,
+.panel-body,
+.nav {
+  clear: both;
+}
+
 // logo
 .logo {
   margin-top: -15px;
@@ -63,30 +73,570 @@
   SITE WRAPS
 ################################################################# */
 
-#headerwrap {
-  background-color: #00b3fe;
-  min-height: 550px;
-  padding-top: 100px;
-  padding-bottom: 0px;
+// content
+.bannercontainer {
+  width: 100%;
+  position: relative;
+  padding: 0;
+  max-height: 500px;
+  overflow: hidden;
+}
+
+.fading-slide:before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: #4c4145;
+  opacity: 0.3;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 40;
+}
+
+// Movie best
+.movie-best {
+  position: relative;
+  margin-top: -100px;
+  z-index: 50;
+}
+
+.movie-best .movie-best__rating {
+  background-color: #ffd564;
   text-align: center;
+  font: 20px 'aleobold', sans-serif;
+  color: #4c4145;
+  text-transform: uppercase;
+  padding-bottom: 25px;
+  padding-top: 26px;
+  position: relative;
 }
 
-#headerwrap h3,
-h5 {
-  color: white;
-  font-weight: 400;
+.movie-best .movie-best__rating:before {
+  content: "";
+  background-image: url("../images/icons/stars.svg");
+  background-repeat: no-repeat;
+  height: 20px;
+  left: 50%;
+  margin-left: -205px;
+  position: absolute;
+  top: 27px;
+  width: 95px;
 }
 
-#headerwrap h1 {
-  color: white;
-  margin-bottom: 25px;
+.movie-best .movie-best__rating:after {
+  content: "";
+  background-image: url("../images/icons/stars.svg");
+  background-repeat: no-repeat;
+  height: 20px;
+  margin-right: -205px;
+  position: absolute;
+  right: 50%;
+  top: 27px;
+  width: 95px;
 }
 
-#headerwrap .img-responsive {
-  margin: 0 auto;
+.movie-best .movie-best__check {
+  cursor: pointer;
+  position: relative;
+  background-color: #ffd564;
+  text-align: center;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  font: 12px;
+  text-transform: uppercase;
+  color: #4c4145;
+  padding-top: 55px;
+  padding-bottom: 15px;
 }
 
+.movie-best .movie-best__check:before {
+  content: '';
+  width: 20px;
+  height: 55px;
+  background-image: url(../images/icons/mause.svg);
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 2px;
+  left: 50%;
+  margin-left: -10px;
+}
 
+.movie-best .movie-beta__info {
+  background-color: #4c4145;
+  padding: 0 10px;
+  margin-bottom: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  visibility: hidden;
+  -webkit-transform: translateY(0%);
+  -moz-transform: translateY(0%);
+  -o-transform: translateY(0%);
+  -ms-transform: translateY(0%);
+  transform: translateY(0%);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.movie-best .movie-beta__info li {
+  border-bottom: 1px solid rgba(180, 177, 178, 0.5);
+  padding-top: 7px;
+  padding-bottom: 3px;
+}
+
+.movie-best .movie-beta__info .last-block {
+  border: none;
+  margin-bottom: 0;
+}
+
+.movie-best .movie-beta__info * {
+  color: #b4b1b2;
+  margin-bottom: 14px;
+  padding: 0 5px;
+  line-height: 14px;
+  font-size: 13px;
+}
+
+.movie-best .movie-beta__info .slide__link {
+  color: #fe505a;
+  font: 16px 'aleoregular', sans-serif;
+  padding-right: 20px;
+  text-transform: uppercase;
+  position: relative;
+  display: inline-block;
+  padding-bottom: 2px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  padding-top: 4px;
+  padding-bottom: 5px;
+  padding-right: 30px;
+}
+
+.movie-best .movie-beta__info .slide__link:before {
+  color: #fe505a;
+  content: "\f054";
+  font: 16px "FontAwesome";
+  position: absolute;
+  right: 10px;
+  top: 6px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.movie-best .movie-beta__info .slide__link:hover {
+  background-color: #fe505a;
+  color: #ffffff;
+}
+
+.movie-best .movie-beta__info .slide__link:hover:before {
+  color: #ffffff;
+}
+
+.movie-best .movie-beta__info .best-voted {
+  padding-top: 10px;
+  padding-bottom: 7px;
+  display: inline-block;
+  margin-bottom: 8px;
+}
+
+.movie-best .movie-beta__info .movie__time {
+  position: relative;
+  padding-left: 23px;
+}
+
+.movie-best .movie-beta__info .movie__time:before {
+  content: "\f017";
+  font: 16px "FontAwesome";
+  color: #b4b1b2;
+  position: absolute;
+  top: 0px;
+  left: 3px;
+}
+
+.movie-best .movie-beta__item {
+  width: 16.666666%;
+  float: left;
+  position: relative;
+  z-index: 7;
+}
+
+.movie-best .movie-beta__item .best-rate {
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 50px;
+  color: #4C4145;
+  font: bold 20px 'Aleo', sans-serif;
+  height: 100px;
+  left: 50%;
+  margin-left: -50px;
+  margin-top: -50px;
+  padding-top: 38px;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.movie-best .movie-beta__item .best-rate:before {
+  background-image: url("../images/rate/star-off.svg");
+  background-repeat: no-repeat;
+  background-size: 14px 14px;
+  content: "";
+  height: 14px;
+  left: 50%;
+  margin-left: -7px;
+  position: absolute;
+  top: 20px;
+  width: 14px;
+}
+
+.movie-best .movie-beta__item .best-rate:after {
+  background-image: url("../images/rate/star-off.svg");
+  background-repeat: no-repeat;
+  background-size: 14px 14px;
+  bottom: 20px;
+  content: "";
+  height: 14px;
+  left: 50%;
+  margin-left: -7px;
+  position: absolute;
+  width: 14px;
+}
+
+.movie-best .movie-beta__item img {
+  max-width: 100%;
+}
+
+.movie-best .movie-beta__item:hover .movie-beta__info {
+  -webkit-transform: translateY(100%);
+  -moz-transform: translateY(100%);
+  -o-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%);
+  visibility: visible;
+}
+
+.movie-best .movie-beta__item:hover .best-rate {
+  background-color: #ffd564;
+}
+
+// movie feed
+.movie--test {
+  width: 50%;
+  float: left;
+  margin-bottom: 8px;
+}
+.movie--test .movie__images {
+  width: 50%;
+  border: none;
+  position: relative;
+}
+.movie--test .movie__images:before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  position: absolute;
+  top: 0;
+  z-index: 20;
+}
+.movie--test .movie__images:after {
+  content: "";
+  width: 1px;
+  height: 30px;
+  position: absolute;
+  top: 0;
+}
+.movie--test .movie-beta__link {
+  display: block;
+  position: relative;
+}
+.movie--test .movie-beta__link:after {
+  content: '';
+  background-color: rgba(255, 255, 255, 0);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  z-index: 19;
+}
+.movie--test .movie-beta__link:hover:after {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+.movie--test .movie__info {
+  overflow: hidden;
+  padding: 17px 17px;
+  position: relative;
+  min-height: 200px;
+  margin: 0;
+}
+.movie--test .movie__title {
+  font-size: 16px;
+  font-weight: bold;
+}
+.movie--test .movie__time {
+  margin-bottom: 0;
+}
+.movie--test .movie__rate {
+  border: none;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.movie--test .movie__rate .movie__rating {
+  display: block;
+  position: absolute;
+  top: -13px;
+  right: 30px;
+  left: auto;
+}
+.movie--test .movie__rate .score {
+  position: absolute;
+  top: 2px;
+  left: 0;
+}
+.movie--test .movie__rate .score img {
+  width: 15px;
+}
+.movie--test--light {
+  background-color: #f5f5f5;
+}
+.movie--test--light .movie__images:before {
+  border-color: transparent #f5f5f5 transparent transparent;
+}
+.movie--test--light .movie__images:after {
+  background-color: #f5f5f5;
+}
+.movie--test--dark {
+  background-color: #dbdee1;
+}
+.movie--test--dark .movie__images:before {
+  border-color: transparent #dbdee1 transparent transparent;
+}
+.movie--test--dark .movie__images:after {
+  background-color: #dbdee1;
+}
+.movie--test--left .movie__images {
+  float: left;
+}
+.movie--test--left .movie__images:before {
+  border-width: 0 20px 20px 0;
+  right: 0;
+}
+.movie--test--left .movie__images:after {
+  right: 14px;
+  -webkit-transform: skewX(45deg);
+  -ms-transform: skewX(45deg);
+  transform: skewX(45deg);
+}
+.movie--test--right .movie__images {
+  float: right;
+}
+.movie--test--right .movie__images:before {
+  border-width: 20px 20px  0 0;
+  left: 0;
+}
+.movie--test--right .movie__images:after {
+  left: 14px;
+  -webkit-transform: skewX(-45deg);
+  -ms-transform: skewX(-45deg);
+  transform: skewX(-45deg);
+}
+.movie--test--right.movie--test--light .movie__images:before {
+  border-color: #f5f5f5 transparent transparent transparent;
+}
+.movie--test--right.movie--test--dark .movie__images:before {
+  border-color: #dbdee1 transparent transparent transparent;
+}
+// mega select
+.mega-select .mega-select__point {
+  font-weight: bold;
+  font-size: 13px;
+  float: left;
+  margin-top: 2px;
+  margin-right: 30px;
+}
+.mega-select .filter-wrap {
+  position: relative;
+  display: inline-block;
+  margin: 0 13px;
+}
+.mega-select .mega-select__filter {
+  position: relative;
+}
+.mega-select .mega-select__filter:after {
+  content: '';
+  background-image: url('../images/components/wave-main.svg');
+  background-repeat: repeat-x;
+  -webkit-background-size: 40px 4px;
+  background-size: 40px 4px;
+  height: 4px;
+  width: 48px;
+  position: absolute;
+  bottom: -3px;
+  left: 50%;
+  margin-left: -24px;
+}
+.mega-select .mega-select__filter:hover:after {
+  background-image: url('../images/components/wave-danger.svg');
+}
+.mega-select .filter--active {
+  color: #fe505a;
+}
+.mega-select .filter--active:after,
+.mega-select .filter--active:hover:after {
+  display: none;
+}
+.mega-select .select__field {
+  width: 600px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background-color: #fff;
+  border: solid 1px #dbdee1;
+  font-size: 13px;
+  color: #4c4145;
+  padding: 8px 20px 9px;
+  margin-top: 7px;
+  float: left;
+  margin-right: -3px;
+}
+.mega-select .select__btn {
+  margin-top: 6px;
+  display: inline-block;
+  float: right;
+}
+.mega-select .select__btn a {
+  display: none;
+}
+.mega-select .select__btn--sample {
+  float: none;
+  margin-top: 14px;
+}
+.mega-select .select__dropdowns {
+  position: relative;
+}
+.mega-select .select__group {
+  opacity: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  position: absolute;
+  top: 43px;
+  left: 0;
+  z-index: 75;
+  display: none;
+  padding: 19px 30px 20px;
+  margin-left: 1px;
+  width: 596px;
+  background-color: #4c4145;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.16);
+  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.16);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.16);
+}
+.mega-select .select__group .select__variant {
+  color: #b4b1b2;
+  font-size: 13px;
+  padding: 6px 0;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.mega-select .select__group .select__variant:hover {
+  color: #ffffff;
+}
+.mega-select-marker {
+  margin-bottom: 3px;
+  display: inline-block;
+}
+.mega-select-marker .select-marker {
+  margin-bottom: 0;
+  font-family: 'aleobold', sans-serif;
+  color: #4c4145;
+  font-size: 50px;
+  text-transform: uppercase;
+  line-height: 34px;
+  display: inline-block;
+}
+.mega-select-marker .select-marker span {
+  font-size: 24px;
+  text-transform: none;
+}
+.mega-select-marker .marker-indecator {
+  margin-top: -4px;
+  display: inline-block;
+  float: left;
+  position: relative;
+  z-index: 10;
+  display: none;
+}
+.mega-select-marker .marker-indecator:before {
+  content: '';
+  background-repeat: no-repeat;
+  width: 140px;
+  height: 140px;
+  position: absolute;
+  top: -20px;
+  left: 50%;
+  margin-left: -70px;
+  z-index: -1;
+}
+.mega-select-marker .location:before {
+  background-image: url(../images/icons/location.svg);
+}
+.mega-select-marker .cinema:before {
+  background-image: url(../images/icons/camera.svg);
+  width: 200px;
+  margin-left: -20px;
+}
+.mega-select-marker .film-category:before {
+  background-image: url(../images/icons/fiml.svg);
+}
+.mega-select-marker .actors:before {
+  background-image: url(../images/icons/actors.svg);
+  width: 200px;
+  margin-left: -100px;
+}
+.mega-select-marker .director:before {
+  background-image: url(../images/icons/director.svg);
+  top: -25px;
+}
+.mega-select-marker .country:before {
+  background-image: url(../images/icons/country.svg);
+}
+.mega-select-top {
+  padding-top: 72px;
+  padding-bottom: 34px;
+  margin-bottom: -10px;
+}
+// page heading
+.page-heading {
+  padding-left: 30px;
+  margin-top: 56px;
+  margin-bottom: 27px;
+  font: 20px 'aleobold', sans-serif;
+  color: #4c4145;
+  text-transform: uppercase;
+  background-image: url(../images/components/scarf.png);
+  -webkit-background-size: 21px 6px;
+  background-size: 21px 6px;
+  background-position: left center;
+  background-repeat: no-repeat;
+}
+.heading--outcontainer {
+  margin-left: 15px;
+  margin-right: 15px;
+}
 /* Footer */
 
 #footerwrap {
