--- a/angular/views/main.html
+++ b/angular/views/main.html
@@ -12,10 +12,10 @@
     </div>
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">HOME</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-        <li class="dropdown" ng-class="{'open': isActive}" ng-click="activeButton()">
+        <li><a href="index.html">HOME</a></li>
+        <li><a ng-click="gotoAnchor()">ABOUT</a></li>
+        <li><a ng-click="gotoAnchor()">CONTACT</a></li>
+        <li ng-if="user.role" class="dropdown" ng-class="{'open': isActive}" ng-click="activeButton()">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="blog.html">BLOG</a></li>
@@ -29,277 +29,8 @@
     <!--/.nav-collapse -->
   </div>
 </div>
-<!-- Slider -->
-<div class="bannercontainer">
-  <div class="banner">
-    <ul>
-      <li data-transition="fade" data-slotamount="7" class="slide" data-slide='Rush.'>
-        <img alt='' src="http://placehold.it/1920x616">
-        <div class="caption slide__name margin-slider" data-x="right" data-y="80" data-splitin="chars" data-elementdelay="0.1" data-speed="700" data-start="1400" data-easing="easeOutBack" data-customin="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:0;transformOrigin:50% 50%;" data-frames="{ typ :lines;
-                                                 elementdelay :0.1;
-                                                 start:1650;
-                                                 speed:500;
-                                                 ease:Power3.easeOut;
-                                                 animation:x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:1;transformPerspective:600;transformOrigin:50% 50%;
-                                                 },
-                                                 { typ :lines;
-                                                 elementdelay :0.1;
-                                                 start:2150;
-                                                 speed:500;
-                                                 ease:Power3.easeOut;
-                                                 animation:x:0;y:0;z:0;rotationX:00;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:1;transformPerspective:600;transformOrigin:50% 50%;
-                                                 }
-                                                 " data-splitout="lines" data-endelementdelay="0.1" data-customout="x:-230;y:0;z:0;rotationX:0;rotationY:0;rotationZ:90;scaleX:0.2;scaleY:0;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%" data-endspeed="500" data-end="8400" data-endeasing="Back.easeIn">
-          RUSH
-        </div>
-        <div class="caption slide__time margin-slider sfr str" data-x="right" data-hoffset='-243' data-y="186" data-speed="300" data-start="2100" data-easing="easeOutBack" data-endspeed="300" data-end="8700" data-endeasing="Back.easeIn">
-          From
-        </div>
-        <div class="caption slide__date margin-slider lfb ltb" data-x="right" data-hoffset='-149' data-y="186" data-speed="500" data-start="2400" data-easing="Power4.easeOut" data-endspeed="400" data-end="8200" data-endeasing="Back.easeIn">
-          October 18
-        </div>
-        <div class="caption slide__time margin-slider sfr str" data-x="right" data-hoffset='-113' data-y="186" data-speed="300" data-start="2100" data-easing="easeOutBack" data-endspeed="300" data-end="8700" data-endeasing="Back.easeIn">
-          - till
-        </div>
-        <div class="caption slide__date margin-slider lfb ltb" data-x="right" data-y="186" data-speed="500" data-start="2800" data-easing="Power4.easeOut" data-endspeed="400" data-end="8200" data-endeasing="Back.easeIn">
-          November 01
-        </div>
-        <div class="caption slide__text margin-slider customin customout" data-x="right" data-y="250" data-customin="x:0;y:100;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:1;scaleY:3;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:0% 0%;" data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;" data-speed="400" data-start="3000" data-endspeed="400" data-end="8000" data-endeasing="Back.easeIn">
-          Two-time Academy Award winner Ron Howard, teams once again with fellow two-time Academy
-          <br> Award nominee, writer Peter Morgan , on Rush, a spectacular big-screen re-creation of the merciless
-          <br> 1970s rivalry between James Hunt and Niki Lauda.
-        </div>
-        <div class="caption margin-slider skewfromright customout " data-x="right" data-y="324" data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;" data-speed="400" data-start="3300" data-easing="Power4.easeOut" data-endspeed="300" data-end="7700" data-endeasing="Power4.easeOut">
-          <a href="#" class="slide__link">check out cinemas &amp; time</a>
-        </div>
-      </li>
-    </ul>
-  </div>
+<div ui-view="content">
 </div>
-<!--end slider -->
-<!-- Main content -->
-<section class="container">
-  <div class="movie-best">
-    <div class="col-sm-10 col-sm-offset-1 movie-best__rating">Today Best choice</div>
-    <div class="col-sm-12 change--col">
-      <div class="movie-beta__item ">
-        <img alt='' src="http://placehold.it/380x600">
-        <span class="best-rate">5.0</span>
-        <ul class="movie-beta__info">
-          <li><span class="best-voted">71 people voted today</span></li>
-          <li>
-            <p class="movie__time">169 min</p>
-            <p>Adventure | Drama | Fantasy </p>
-            <p>38 comments</p>
-          </li>
-          <li class="last-block">
-            <a href="movie-page-left.html" class="slide__link">more</a>
-          </li>
-        </ul>
-      </div>
-      <div class="movie-beta__item second--item">
-        <img alt='' src="http://placehold.it/380x600">
-        <span class="best-rate">5.0</span>
-        <ul class="movie-beta__info">
-          <li><span class="best-voted">71 people voted today</span></li>
-          <li>
-            <p class="movie__time">169 min</p>
-            <p>Adventure | Drama | Fantasy </p>
-            <p>38 comments</p>
-          </li>
-          <li class="last-block">
-            <a href="movie-page-left.html" class="slide__link">more</a>
-          </li>
-        </ul>
-      </div>
-      <div class="movie-beta__item third--item">
-        <img alt='' src="http://placehold.it/380x600">
-        <span class="best-rate">5.0</span>
-        <ul class="movie-beta__info">
-          <li><span class="best-voted">71 people voted today</span></li>
-          <li>
-            <p class="movie__time">169 min</p>
-            <p>Adventure | Drama | Fantasy </p>
-            <p>38 comments</p>
-          </li>
-          <li class="last-block">
-            <a href="movie-page-left.html" class="slide__link">more</a>
-          </li>
-        </ul>
-      </div>
-      <div class="movie-beta__item hidden-xs">
-        <img alt='' src="http://placehold.it/380x600">
-        <span class="best-rate">5.0</span>
-        <ul class="movie-beta__info">
-          <li><span class="best-voted">71 people voted today</span></li>
-          <li>
-            <p class="movie__time">169 min</p>
-            <p>Adventure | Drama | Fantasy </p>
-            <p>38 comments</p>
-          </li>
-          <li class="last-block">
-            <a href="movie-page-left.html" class="slide__link">more</a>
-          </li>
-        </ul>
-      </div>
-      <div class="movie-beta__item hidden-xs hidden-sm">
-        <img alt='' src="http://placehold.it/380x600">
-        <span class="best-rate">5.0</span>
-        <ul class="movie-beta__info">
-          <li><span class="best-voted">71 people voted today</span></li>
-          <li>
-            <p class="movie__time">169 min</p>
-            <p>Adventure | Drama | Fantasy </p>
-            <p>38 comments</p>
-          </li>
-          <li class="last-block">
-            <a href="movie-page-left.html" class="slide__link">more</a>
-          </li>
-        </ul>
-      </div>
-      <div class="movie-beta__item hidden-xs hidden-sm">
-        <img alt='' src="http://placehold.it/380x600">
-        <span class="best-rate">5.0</span>
-        <ul class="movie-beta__info">
-          <li><span class="best-voted">71 people voted today</span></li>
-          <li>
-            <p class="movie__time">169 min</p>
-            <p>Adventure | Drama | Fantasy </p>
-            <p>38 comments</p>
-          </li>
-          <li class="last-block">
-            <a href="movie-page-left.html" class="slide__link">more</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-sm-10 col-sm-offset-1 movie-best__check">check all movies now playing</div>
-  </div>
-  <div class="col-sm-12">
-    <div class="mega-select-present mega-select-top mega-select--full">
-      <div class="mega-select-marker">
-        <div class="marker-indecator location">
-          <p class="select-marker"><span>movie to watch now</span>
-            <br>in your city</p>
-        </div>
-        <div class="marker-indecator cinema">
-          <p class="select-marker"><span>find your </span>
-            <br>cinema</p>
-        </div>
-        <div class="marker-indecator film-category">
-          <p class="select-marker"><span>find movie due to </span>
-            <br> your mood</p>
-        </div>
-        <div class="marker-indecator actors">
-          <p class="select-marker"><span> like particular stars</span>
-            <br>find them</p>
-        </div>
-        <div class="marker-indecator director">
-          <p class="select-marker"><span>admire personalities - find </span>
-            <br>by director</p>
-        </div>
-        <div class="marker-indecator country">
-          <p class="select-marker"><span>search for movie from certain </span>
-            <br>country?</p>
-        </div>
-      </div>
-      <div class="mega-select pull-right">
-        <span class="mega-select__point">Search by</span>
-        <ul class="mega-select__sort">
-          <li class="filter-wrap"><a href="#" class="mega-select__filter" data-filter='cinema'>Cinema</a></li>
-          <li class="filter-wrap"><a href="#" class="mega-select__filter" data-filter='actors'>Actors</a></li>
-          <li class="filter-wrap"><a href="#" class="mega-select__filter" data-filter='director'>Director</a></li>
-        </ul>
-        <input name="search-input" type='text' class="select__field">
-        <div class="select__btn">
-          <a href="#" class="btn btn-md btn--danger cinema">find <span class="hidden-exrtasm">suitable cimema</span></a>
-          <a href="#" class="btn btn-md btn--danger actors">find <span class="hidden-exrtasm">talented actors</span></a>
-          <a href="#" class="btn btn-md btn--danger director">find <span class="hidden-exrtasm">favorite director</span></a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="clearfix"></div>
-  <h2 id='target' class="page-heading heading--outcontainer">Now in the cinema</h2>
-  <div class="col-sm-12">
-    <div class="row">
-      <div class="col-sm-8 col-md-9">
-        <!-- Movie variant with time -->
-        <div class="movie movie--test movie--test--dark movie--test--left">
-          <div class="movie__images">
-            <a href="movie-page-left.html" class="movie-beta__link">
-              <img alt='' src="http://placehold.it/424x424">
-            </a>
-          </div>
-          <div class="movie__info">
-            <a href='movie-page-left.html' class="movie__title">Gravity (2013)  </a>
-            <p class="movie__time">91 min</p>
-            <p class="movie__option"><a href="#">Sci-Fi</a> | <a href="#">Thriller</a> | <a href="#">Drama</a></p>
-            <div class="movie__rate">
-              <div class="score"></div>
-              <span class="movie__rating">4.1</span>
-            </div>
-          </div>
-        </div>
-        <!-- Movie variant with time -->
-        <!-- Movie variant with time -->
-        <div class="movie movie--test movie--test--light movie--test--left">
-          <div class="movie__images">
-            <a href="movie-page-left.html" class="movie-beta__link">
-              <img alt='' src="http://placehold.it/424x424">
-            </a>
-          </div>
-          <div class="movie__info">
-            <a href='movie-page-left.html' class="movie__title">The Hobbit: The Desolation of Smaug (2013)  </a>
-            <p class="movie__time">169 min</p>
-            <p class="movie__option"><a href="#">Adventure</a> | <a href="#">Fantasy</a> | <a href="#">Drama</a></p>
-            <div class="movie__rate">
-              <div class="score"></div>
-              <span class="movie__rating">5.0</span>
-            </div>
-          </div>
-        </div>
-        <!-- Movie variant with time -->
-        <!-- Movie variant with time -->
-        <div class="movie movie--test movie--test--light movie--test--right">
-          <div class="movie__images">
-            <a href="movie-page-left.html" class="movie-beta__link">
-              <img alt='' src="http://placehold.it/424x424">
-            </a>
-          </div>
-          <div class="movie__info">
-            <a href='movie-page-left.html' class="movie__title">The Hunger Games: Catching Fire (2013)   </a>
-            <p class="movie__time">146 min</p>
-            <p class="movie__option"><a href="#">Action</a> | <a href="#">Adventure</a> | <a href="#">Sci-Fi</a></p>
-            <div class="movie__rate">
-              <div class="score"></div>
-              <span class="movie__rating">4.9</span>
-            </div>
-          </div>
-        </div>
-        <!-- Movie variant with time -->
-        <!-- Movie variant with time -->
-        <div class="movie movie--test movie--test--dark movie--test--right">
-          <div class="movie__images">
-            <a href="movie-page-left.html" class="movie-beta__link">
-              <img alt='' src="http://placehold.it/424x424">
-            </a>
-          </div>
-          <div class="movie__info">
-            <a href='movie-page-left.html' class="movie__title">Thor: The Dark World (2013) </a>
-            <p class="movie__time">112 min</p>
-            <p class="movie__option"><a href="#">Action</a> | <a href="#">Adventure</a> | <a href="#">Fantasy</a></p>
-            <div class="movie__rate">
-              <div class="score"></div>
-              <span class="movie__rating">5.0</span>
-            </div>
-          </div>
-        </div>
-        <!-- Movie variant with time -->
-      </div>
-    </div>
-  </div>
-</section>
 <!-- *****************************************************************************************************************
    FOOTER
    ***************************************************************************************************************** -->
