--- a/angular/views/main.html
+++ b/angular/views/main.html
@@ -12,7 +12,7 @@
     </div>
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
-        <li><a href="index.html">HOME</a></li>
+        <li><a ng-click="$state.go('index.home')">HOME</a></li>
         <li><a ng-click="gotoAnchor()">ABOUT</a></li>
         <li><a ng-click="gotoAnchor()">CONTACT</a></li>
         <li ng-if="user.role" class="dropdown" ng-class="{'open': isActive}" ng-click="activeButton()">
