--- a/angular/views/home.html
+++ b/angular/views/home.html
@@ -1,14 +1,25 @@
 <!-- Slider -->
 <div class="bannercontainer">
-  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3000">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
+  <div style="height:400px">
+    <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
+      <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
+        <img ng-src="{{slide.image}}" style="margin:auto;">
+        <!-- <div class="carousel-caption">
+          <h4>Slide {{slide.id}}</h4>
+          <p>{{slide.text}}</p>
+        </div> -->
+      </div>
+    </div>
+  </div>
+  <!-- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="3000"> -->
+  <!-- Indicators -->
+  <!--  <ol class="carousel-indicators">
       <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
       <li data-target="#carousel-example-generic" data-slide-to="1"></li>
       <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
+    </ol> -->
+  <!-- Wrapper for slides -->
+  <!-- <div class="carousel-inner">
       <div class="item active">
         <img class="banner-img" src="http://placehold.it/1200x315" alt="...">
       </div>
@@ -17,19 +28,19 @@
       </div>
       <div class="item">
         <img class="banner-img" src="http://placehold.it/1200x315" alt="...">
-        <!--  <div class="carousel-caption">
+         <div class="carousel-caption">
           <h3>Caption Text</h3>
-        </div> -->
+        </div>
       </div>
-    </div>
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    </div> -->
+  <!-- Controls -->
+  <!-- <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
     </a>
     <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right"></span>
     </a>
-  </div>
+  </div> -->
   <!-- Carousel -->
 </div>
 <!--end slider -->
