--- a/angular/views/main.html
+++ b/angular/views/main.html
@@ -13,8 +13,9 @@
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
         <li><a ng-click="$state.go('index.home')">HOME</a></li>
-        <li><a ng-click="gotoAnchor()">ABOUT</a></li>
-        <li><a ng-click="gotoAnchor()">CONTACT</a></li>
+        <li><a>LOGIN</a></li>
+        <!-- <li><a ng-click="gotoAnchor()">ABOUT</a></li> -->
+        <!-- <li><a ng-click="gotoAnchor()">CONTACT</a></li> -->
         <li ng-if="user.role" class="dropdown" ng-class="{'open': isActive}" ng-click="activeButton()">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <b class="caret"></b></a>
           <ul class="dropdown-menu">
