movie details added

--- a/angular/styles/style.css
+++ b/angular/styles/style.css
@@ -825,6 +825,9 @@ table {
   padding-right: 15px;
   position: relative;
 }
+.movie-detail {
+  margin-top: 70px;
+}
 @media (min-width: 768px) {
   .container {
     width: 750px;
