--- a/angular/views/home.html
+++ b/angular/views/home.html
@@ -1,6 +1,6 @@
 <!-- Slider -->
 <div class="bannercontainer">
-  <div style="height:400px">
+  <div style="height:50%">
     <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
       <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
         <img ng-src="{{slide.image}}" style="margin:auto;">
@@ -127,79 +127,23 @@
   <h2 id='target' class="page-heading heading--outcontainer">Now in the cinema</h2>
   <div class="col-sm-12">
     <div class="row">
-      <div class="col-sm-8 col-md-9">
-        <!-- Movie variant with time -->
-        <div class="movie movie--test movie--test--dark movie--test--left">
+      <div ng-repeat="rows in chunkedMovies" ng-class-odd="'movie--test--left'" ng-class-even="'movie--test--right'" class="col-sm-8 col-md-9">
+        <div ng-repeat="movie in rows" class="movie movie--test movie--test--dark">
           <div class="movie__images">
-            <a href="movie-page-left.html" class="movie-beta__link">
-              <img alt='' src="http://placehold.it/424x424">
+            <a href ng-click="viewMovieDetail(movie.id)" class="movie-beta__link">
+              <div ng-style="{'background': 'url(' + movie.poster +') no-repeat center center', 'background-size': 'cover', 'height': '212px'}"></div>
             </a>
           </div>
           <div class="movie__info">
-            <a href='movie-page-left.html' class="movie__title">Gravity (2013)  </a>
-            <p class="movie__time">91 min</p>
-            <p class="movie__option"><a href="#">Sci-Fi</a> | <a href="#">Thriller</a> | <a href="#">Drama</a></p>
+            <a href='movie-page-left.html' class="movie__title">{{movie.name}}</a>
+            <p class="movie__time">{{movie.duration}}</p>
+            <p class="movie__option">{{movie.genre}}</p>
             <div class="movie__rate">
               <div class="score"></div>
-              <span class="movie__rating">4.1</span>
+              <span class="movie__rating">{{movie.rating}}</span>
             </div>
           </div>
         </div>
-        <!-- Movie variant with time -->
-        <!-- Movie variant with time -->
-        <div class="movie movie--test movie--test--light movie--test--left">
-          <div class="movie__images">
-            <a href="movie-page-left.html" class="movie-beta__link">
-              <img alt='' src="http://placehold.it/424x424">
-            </a>
-          </div>
-          <div class="movie__info">
-            <a href='movie-page-left.html' class="movie__title">The Hobbit: The Desolation of Smaug (2013)  </a>
-            <p class="movie__time">169 min</p>
-            <p class="movie__option"><a href="#">Adventure</a> | <a href="#">Fantasy</a> | <a href="#">Drama</a></p>
-            <div class="movie__rate">
-              <div class="score"></div>
-              <span class="movie__rating">5.0</span>
-            </div>
-          </div>
-        </div>
-        <!-- Movie variant with time -->
-        <!-- Movie variant with time -->
-        <div class="movie movie--test movie--test--light movie--test--right">
-          <div class="movie__images">
-            <a href="movie-page-left.html" class="movie-beta__link">
-              <img alt='' src="http://placehold.it/424x424">
-            </a>
-          </div>
-          <div class="movie__info">
-            <a href='movie-page-left.html' class="movie__title">The Hunger Games: Catching Fire (2013)   </a>
-            <p class="movie__time">146 min</p>
-            <p class="movie__option"><a href="#">Action</a> | <a href="#">Adventure</a> | <a href="#">Sci-Fi</a></p>
-            <div class="movie__rate">
-              <div class="score"></div>
-              <span class="movie__rating">4.9</span>
-            </div>
-          </div>
-        </div>
-        <!-- Movie variant with time -->
-        <!-- Movie variant with time -->
-        <div class="movie movie--test movie--test--dark movie--test--right">
-          <div class="movie__images">
-            <a href="movie-page-left.html" class="movie-beta__link">
-              <img alt='' src="http://placehold.it/424x424">
-            </a>
-          </div>
-          <div class="movie__info">
-            <a href='movie-page-left.html' class="movie__title">Thor: The Dark World (2013) </a>
-            <p class="movie__time">112 min</p>
-            <p class="movie__option"><a href="#">Action</a> | <a href="#">Adventure</a> | <a href="#">Fantasy</a></p>
-            <div class="movie__rate">
-              <div class="score"></div>
-              <span class="movie__rating">5.0</span>
-            </div>
-          </div>
-        </div>
-        <!-- Movie variant with time -->
       </div>
     </div>
   </div>
