--- a/angular/views/main.html
+++ b/angular/views/main.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img class="logo" src="/images/logo.png"></a>
+      <a class="navbar-brand" href ng-click="$state.go('index.home')"><img class="logo" src="/images/logo.png"></a>
     </div>
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
