--- a/angular/views/movie-detail.html
+++ b/angular/views/movie-detail.html
@@ -44,7 +44,7 @@
       <p class="movie__describe">{{movieDetail.description}}</p>
       <h2 class="page-heading">Trailer</h2>
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/zpOULjyy-n8" frameborder="0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" width="560" height="315" ng-src="{{trustSrc(movieDetail.trailer)}}" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
     <div class="choose-container">
