config glyphicon fonts and gulpfile

--- a/angular/styles/app.scss
+++ b/angular/styles/app.scss
@@ -1,6 +1,6 @@
 
 // to get glyphicon
-@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"); 
+// @import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"); 
 // 
 @import "style";
 @import "home";
