--- a/angular/views/movie-detail.html
+++ b/angular/views/movie-detail.html
@@ -1,5 +1,5 @@
 <!-- Main content -->
-<section class="container movie-detail">
+<section class="container movie-container">
   <div class="col-sm-8 col-md-9">
     <div class="movie">
       <h2 class="page-heading">{{movieDetail.name}}</h2>
