--- a/angular/styles/home.scss
+++ b/angular/styles/home.scss
@@ -11,6 +11,10 @@
   margin-bottom: 0px;
 }
 
+.errorMessage {
+  color: #fe505a;
+}
+
 .navbar-brand {
   font-family: 'Raleway', sans-serif;
   font-weight: 900;
