--- a/angular/views/home.html
+++ b/angular/views/home.html
@@ -1,6 +1,6 @@
 <!-- Slider -->
 <div class="bannercontainer">
-  <div style="height:50%">
+  <div style="min-height:50%">
     <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
       <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
         <img ng-src="{{slide.image}}" style="margin:auto;">
@@ -114,12 +114,12 @@
   <div class="col-sm-12">
     <div class="mega-select-present mega-select-top mega-select--full">
       <div class="mega-select pull-right">
-        <span class="mega-select__point">Search by</span>
-        <ul class="mega-select__sort">
+        <span class="mega-select__point">Search</span>
+        <!-- <ul class="mega-select__sort">
           <li class="filter-wrap"><a href="#" class="mega-select__filter" data-filter='actors'>Actors</a></li>
           <li class="filter-wrap"><a href="#" class="mega-select__filter" data-filter='director'>Director</a></li>
-        </ul>
-        <input name="search-input" type='text' class="select__field">
+        </ul> -->
+        <input name="search-input" type='text' class="select__field" ng-model="searchText">
       </div>
     </div>
   </div>
@@ -127,7 +127,7 @@
   <h2 id='target' class="page-heading heading--outcontainer">Now in the cinema</h2>
   <div class="col-sm-12">
     <div class="row">
-      <div ng-repeat="rows in chunkedMovies" ng-class-odd="'movie--test--left'" ng-class-even="'movie--test--right'" class="col-sm-8 col-md-9">
+      <div ng-repeat="rows in chunkedMovies | filter: searchText" ng-class-odd="'movie--test--left'" ng-class-even="'movie--test--right'" class="col-sm-8 col-md-9">
         <div ng-repeat="movie in rows" class="movie movie--test movie--test--dark">
           <div class="movie__images">
             <a href ng-click="viewMovieDetail(movie.id)" class="movie-beta__link">
@@ -135,7 +135,7 @@
             </a>
           </div>
           <div class="movie__info">
-            <a href='movie-page-left.html' class="movie__title">{{movie.name}}</a>
+            <a href ng-click="viewMovieDetail(movie.id)" class="movie__title">{{movie.name}}</a>
             <p class="movie__time">{{movie.duration}}</p>
             <p class="movie__option">{{movie.genre}}</p>
             <div class="movie__rate">
