--- a/angular/views/main.html
+++ b/angular/views/main.html
@@ -13,16 +13,16 @@
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
         <li><a ng-click="$state.go('index.home')">HOME</a></li>
-        <li ng-click="openLogin()"><a >LOGIN</a></li>
+        <li ng-if="!user.role" ng-click="openLogin()"><a >LOGIN</a></li>
         <!-- <li><a ng-click="gotoAnchor()">ABOUT</a></li> -->
         <!-- <li><a ng-click="gotoAnchor()">CONTACT</a></li> -->
         <li ng-if="user.role" class="dropdown" ng-class="{'open': isActive}" ng-click="activeButton()">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">PAGES <b class="caret"></b></a>
+          <a href class="dropdown-toggle" data-toggle="dropdown">PAGES <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="single-post.html">SINGLE POST</a></li>
-            <li><a href="portfolio.html">PORTFOLIO</a></li>
-            <li><a href="single-project.html">SINGLE PROJECT</a></li>
+            <li><a href ng-click="$state.go('index.manage')">MANAGE MOVIES</a></li>
+            <!-- <li><a href="single-post.html">SINGLE POST</a></li> -->
+            <!-- <li><a href="portfolio.html">PORTFOLIO</a></li> -->
+            <!-- <li><a href="single-project.html">SINGLE PROJECT</a></li> -->
           </ul>
         </li>
       </ul>
