--- a/angular/views/manage-movie.html
+++ b/angular/views/manage-movie.html
@@ -1,3 +1,65 @@
-<div class="bannercontainer">
-<h1>manage movies here</h1>
-</div>
+<section class="container movie-container">
+  <div class="col-sm-12">
+    <div class="row">
+      <div class="col-sm-8 col-md-9">
+        <h2 class="page-heading">Add A Movie</h2>
+        <button ng-click="openMovieModal()" class="btn btn-md btn--danger search__button">+</button>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-12">
+    <div class="row">
+      <div class="col-sm-8 col-md-9">
+        <h2 class="page-heading">All Movies</h2>
+        <!-- <div class="container container--add"> -->
+        <form id='search-form' method='get' class="search">
+          <input type="text" class="search__field" placeholder="Search" ng-model="searchText">
+          <select name="sorting_item" id="search-sort" class="search__sort" tabindex="0">
+            <option value="1" selected='selected'>By title</option>
+            <option value="2">By year</option>
+            <option value="3">By producer</option>
+            <option value="4">By title</option>
+            <option value="5">By year</option>
+          </select>
+          <button type='submit' class="btn btn-md btn--danger search__button">search a movie</button>
+        </form>
+        <!-- </div> -->
+        <div class="rates-wrapper">
+          <table>
+            <colgroup class="col-width-lg">
+              <colgroup class="col-width">
+                <colgroup class="col-width-sm">
+                  <colgroup class="col-width">
+                    <tr ng-repeat="movie in movies | filter:searchText" class="rates rates--top">
+                      <td class="rates__obj"><a href="#" class="rates__obj-name">{{$index +1}}. {{movie.name}} </a></td>
+                      <!-- <td class="rates__vote">233 546 votes</td> -->
+                      <td class="rates__result">{{movie.rating}}</td>
+                      <td class="rates__vote">
+                        <a href class="rates__obj-name">DELETE</a>
+                      </td>
+                      <td class="rates__vote">
+                        <a href class="rates__obj-name">EDIT</a>
+                      </td>
+                    </tr>
+                    <!-- <tr class="rates rates--top">
+                      <td class="rates__obj"><a href="#" class="rates__obj-name">3. How I Live Now</a></td>
+                      <td class="rates__vote">843 546 votes</td>
+                      <td class="rates__result">4.9</td>
+                      <td class="rates__stars">
+                        <div class="score"></div>
+                      </td>
+                    </tr>
+                    <tr class="rates">
+                      <td class="rates__obj"><a href="#" class="rates__obj-name">4. The Armstrong Lie</a></td>
+                      <td class="rates__vote">3 598 votes</td>
+                      <td class="rates__result">4.9</td>
+                      <td class="rates__stars">
+                        <div class="score"></div>
+                      </td>
+                    </tr> -->
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
