--- a/angular/views/movie-popup.html
+++ b/angular/views/movie-popup.html
@@ -42,7 +42,7 @@
     <input type="text" name="cast" id="cast" class="form-control input-lg" placeholder="Cast" tabindex="7" ng-model="movie.cast">
   </div>
   <div class="form-group">
-    <textarea name="description" id="description" class="form-control input-lg" placeholder="Description" row="5" tabindex="8" ng-model="movie.description"></textarea>
+    <textarea name="description" id="description" class="form-control input-lg" placeholder="Description" tabindex="8" ng-model="movie.description"></textarea>
   </div>
   <div class="form-group">
     <input type="text" name="trailer" id="trailer" class="form-control input-lg" placeholder="Trailer Link" tabindex="9" ng-model="movie.trailer">
