--- a/angular/views/home.html
+++ b/angular/views/home.html
@@ -115,11 +115,13 @@
     <div class="mega-select-present mega-select-top mega-select--full">
       <div class="mega-select pull-right">
         <span class="mega-select__point">Search</span>
-        <!-- <ul class="mega-select__sort">
-          <li class="filter-wrap"><a href="#" class="mega-select__filter" data-filter='actors'>Actors</a></li>
-          <li class="filter-wrap"><a href="#" class="mega-select__filter" data-filter='director'>Director</a></li>
-        </ul> -->
-        <input name="search-input" type='text' class="select__field" ng-model="searchText">
+        <ul class="mega-select__sort">
+          <li class="filter-wrap"><a class="mega-select__filter">Movies</a></li>
+          <li class="filter-wrap"><a class="mega-select__filter">Actors</a></li>
+          <li class="filter-wrap"><a class="mega-select__filter">Directors</a></li>
+          <li class="filter-wrap"><a class="mega-select__filter">Genres</a></li>
+        </ul>
+        <input name="search-input" type='text' class="select__field" ng-model="query">
       </div>
     </div>
   </div>
@@ -127,7 +129,7 @@
   <h2 id='target' class="page-heading heading--outcontainer">Now in the cinema</h2>
   <div class="col-sm-12">
     <div class="row">
-      <div ng-repeat="rows in chunkedMovies | filter: searchText" ng-class-odd="'movie--test--left'" ng-class-even="'movie--test--right'" class="col-sm-8 col-md-9">
+      <div ng-repeat="rows in chunkedMovies | filter: query" ng-class-odd="'movie--test--left'" ng-class-even="'movie--test--right'" class="col-sm-8 col-md-9">
         <div ng-repeat="movie in rows" class="movie movie--test movie--test--dark">
           <div class="movie__images">
             <a href ng-click="viewMovieDetail(movie.id)" class="movie-beta__link">
