--- a/angular/views/manage-movie.html
+++ b/angular/views/manage-movie.html
@@ -2,28 +2,12 @@
   <div class="col-sm-12">
     <div class="row">
       <div class="col-sm-8 col-md-9">
-        <h2 class="page-heading">Add A Movie</h2>
-        <button ng-click="openMovieModal()" class="btn btn-md btn--danger search__button">+</button>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-12">
-    <div class="row">
-      <div class="col-sm-8 col-md-9">
         <h2 class="page-heading">All Movies</h2>
-        <!-- <div class="container container--add"> -->
-        <form id='search-form' method='get' class="search">
+        <a href ng-click="openMovieModal()" class="watchlist">Add a movie</a>
+        <form id='search-form' class="search">
           <input type="text" class="search__field" placeholder="Search" ng-model="query.name">
-          <select name="sorting_item" id="search-sort" class="search__sort" tabindex="0">
-            <option value="1" selected='selected'>By title</option>
-            <option value="2">By year</option>
-            <option value="3">By producer</option>
-            <option value="4">By title</option>
-            <option value="5">By year</option>
-          </select>
-          <button type='submit' class="btn btn-md btn--danger search__button">search a movie</button>
+          <button class="btn btn-md btn--danger search__button">search a movie</button>
         </form>
-        <!-- </div> -->
         <div class="rates-wrapper">
           <table>
             <colgroup class="col-width-lg">
@@ -31,7 +15,7 @@
                 <colgroup class="col-width-sm">
                   <colgroup class="col-width">
                     <tr ng-repeat="movie in movies | filter:query" class="rates rates--top">
-                      <td class="rates__obj"><a href="#" class="rates__obj-name">{{$index +1}}. {{movie.name}} </a></td>
+                      <td class="rates__obj"><a href ng-click="viewMovieDetail(movie.id)" class="rates__obj-name">{{$index +1}}. {{movie.name}} </a></td>
                       <!-- <td class="rates__vote">233 546 votes</td> -->
                       <td class="rates__result">{{movie.rating}}</td>
                       <td class="rates__vote">
