delete function added

--- a/angular/views/manage-movie.html
+++ b/angular/views/manage-movie.html
@@ -19,7 +19,7 @@
                       <!-- <td class="rates__vote">233 546 votes</td> -->
                       <td class="rates__result">{{movie.rating}}</td>
                       <td class="rates__vote">
-                        <a href class="rates__obj-name">DELETE</a>
+                        <a href ng-click="deleteMovie(user.id, movie.id)" class="rates__obj-name">DELETE</a>
                       </td>
                       <td class="rates__vote">
                         <a href class="rates__obj-name">EDIT</a>
