--- a/angular/styles/home.scss
+++ b/angular/styles/home.scss
@@ -15,6 +15,12 @@
   color: #fe505a;
 }
 
+.modal-header {
+  h2 {
+    margin-top: 23px;
+  }
+}
+
 .navbar-brand {
   font-family: 'Raleway', sans-serif;
   font-weight: 900;
