change logo and add scroll animation for header

--- a/angular/styles/app.scss
+++ b/angular/styles/app.scss
@@ -6,3 +6,8 @@
 @import "home";
 @import "settings";
 @import "gozha-nav";
+@import "global";
+@font-face {
+    font-family: Kaushan Script;
+    src: url(/../fonts/KaushanScript-Regular.otf);
+}
