--- a/angular/views/main.html
+++ b/angular/views/main.html
@@ -2,13 +2,8 @@
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href ng-click="$state.go('index.home')"><img class="logo" src="/images/logo.png"></a>
+      <a class="navbar-brand" href ng-click="$state.go('index.home')"><img class="logo" src="/images/logo3.png"></a>
+      <div class="navbar-brand navbar-brand-name">moView</div>
     </div>
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
