--- a/angular/views/demo.html
+++ b/angular/views/demo.html
@@ -13,7 +13,7 @@
         <div class="col-md-4 inputGroupContainer">
           <div class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input name="first_name" placeholder="First Name" class="form-control" type="text" ng-model="user.name">
+            <input name="first_name" placeholder="First Name" class="form-control" type="text" ng-model="user.name" disabled="true">
           </div>
         </div>
       </div>
@@ -23,7 +23,7 @@
         <div class="col-md-4 inputGroupContainer">
           <div class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input name="last_name" placeholder="Last Name" class="form-control" type="text" ng-model="user.last_name">
+            <input name="last_name" placeholder="Last Name" class="form-control" type="text" ng-model="user.last_name" disabled="true">
           </div>
         </div>
       </div>
@@ -33,7 +33,7 @@
         <div class="col-md-4 inputGroupContainer">
           <div class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-            <input name="email" placeholder="E-Mail Address" class="form-control" type="text" ng-model="user.email">
+            <input name="email" placeholder="E-Mail Address" class="form-control" type="text" ng-model="user.email" disabled="true">
           </div>
         </div>
       </div>
