--- a/angular/views/main.html
+++ b/angular/views/main.html
@@ -1,5 +1,5 @@
 <!-- Fixed navbar -->
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+<div class="navbar navbar-default navbar-fixed-top" role="navigation" ng-if="$state.current.name.indexOf('demo') === -1">
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href ng-click="$state.go('index.home')"><img class="logo" src="/images/logo3.png"></a>
@@ -31,7 +31,7 @@
 <!-- *****************************************************************************************************************
    FOOTER
    ***************************************************************************************************************** -->
-<div id="footerwrap">
+<div id="footerwrap" ng-if="$state.current.name.indexOf('demo') === -1">
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
