--- a/angular/views/main.html
+++ b/angular/views/main.html
@@ -8,7 +8,8 @@
     <div class="navbar-collapse collapse navbar-right">
       <ul class="nav navbar-nav">
         <li><a ng-click="$state.go('index.home')">HOME</a></li>
-        <li ng-if="!user.role" ng-click="openLogin()"><a>LOGIN</a></li>
+        <li ng-if="!user.role" ng-click="openLogin(false)"><a>LOGIN</a></li>
+        <li ng-if="!user.role" ng-click="openLogin(true)"><a>SIGN UP</a></li>
         <!-- <li><a ng-click="gotoAnchor()">ABOUT</a></li> -->
         <!-- <li><a ng-click="gotoAnchor()">CONTACT</a></li> -->
         <li ng-if="user.role" class="dropdown" ng-class="{'open': isActive}" ng-click="activeButton()">
