--- a/angular/views/home.html
+++ b/angular/views/home.html
@@ -16,95 +16,20 @@
 <!-- Main content -->
 <section class="container">
   <div class="movie-best">
-    <div class="col-sm-10 col-sm-offset-1 movie-best__rating">Today Best choice</div>
+    <div class="col-sm-10 col-sm-offset-1 movie-best__rating">Month's Best</div>
     <div class="col-sm-12 change--col">
-      <div class="movie-beta__item ">
-        <img alt='' src="http://placehold.it/380x600">
-        <span class="best-rate">5.0</span>
+      <div ng-repeat="movie in movies" class="movie-beta__item ">
+        <div ng-style="{'background': 'url(' + movie.poster +') no-repeat center center', 'background-size': 'cover', 'height': '247px'}"></div>
+        <span class="best-rate">{{movie.rating}}</span>
         <ul class="movie-beta__info">
-          <li><span class="best-voted">71 people voted today</span></li>
+          <li><span class="best-voted">{{movie.name}}</span></li>
           <li>
-            <p class="movie__time">169 min</p>
-            <p>Adventure | Drama | Fantasy </p>
-            <p>38 comments</p>
+            <p class="movie__time">{{movie.duration}}</p>
+            <p>{{movie.genre}}</p>
+            <p>{{movie.cast}}</p>
           </li>
           <li class="last-block">
-            <a href="movie-page-left.html" class="slide__link">more</a>
-          </li>
-        </ul>
-      </div>
-      <div class="movie-beta__item second--item">
-        <img alt='' src="http://placehold.it/380x600">
-        <span class="best-rate">5.0</span>
-        <ul class="movie-beta__info">
-          <li><span class="best-voted">71 people voted today</span></li>
-          <li>
-            <p class="movie__time">169 min</p>
-            <p>Adventure | Drama | Fantasy </p>
-            <p>38 comments</p>
-          </li>
-          <li class="last-block">
-            <a href="movie-page-left.html" class="slide__link">more</a>
-          </li>
-        </ul>
-      </div>
-      <div class="movie-beta__item third--item">
-        <img alt='' src="http://placehold.it/380x600">
-        <span class="best-rate">5.0</span>
-        <ul class="movie-beta__info">
-          <li><span class="best-voted">71 people voted today</span></li>
-          <li>
-            <p class="movie__time">169 min</p>
-            <p>Adventure | Drama | Fantasy </p>
-            <p>38 comments</p>
-          </li>
-          <li class="last-block">
-            <a href="movie-page-left.html" class="slide__link">more</a>
-          </li>
-        </ul>
-      </div>
-      <div class="movie-beta__item hidden-xs">
-        <img alt='' src="http://placehold.it/380x600">
-        <span class="best-rate">5.0</span>
-        <ul class="movie-beta__info">
-          <li><span class="best-voted">71 people voted today</span></li>
-          <li>
-            <p class="movie__time">169 min</p>
-            <p>Adventure | Drama | Fantasy </p>
-            <p>38 comments</p>
-          </li>
-          <li class="last-block">
-            <a href="movie-page-left.html" class="slide__link">more</a>
-          </li>
-        </ul>
-      </div>
-      <div class="movie-beta__item hidden-xs hidden-sm">
-        <img alt='' src="http://placehold.it/380x600">
-        <span class="best-rate">5.0</span>
-        <ul class="movie-beta__info">
-          <li><span class="best-voted">71 people voted today</span></li>
-          <li>
-            <p class="movie__time">169 min</p>
-            <p>Adventure | Drama | Fantasy </p>
-            <p>38 comments</p>
-          </li>
-          <li class="last-block">
-            <a href="movie-page-left.html" class="slide__link">more</a>
-          </li>
-        </ul>
-      </div>
-      <div class="movie-beta__item hidden-xs hidden-sm">
-        <img alt='' src="http://placehold.it/380x600">
-        <span class="best-rate">5.0</span>
-        <ul class="movie-beta__info">
-          <li><span class="best-voted">71 people voted today</span></li>
-          <li>
-            <p class="movie__time">169 min</p>
-            <p>Adventure | Drama | Fantasy </p>
-            <p>38 comments</p>
-          </li>
-          <li class="last-block">
-            <a href="movie-page-left.html" class="slide__link">more</a>
+            <a href ng-click="viewMovieDetail(movie.id)" class="slide__link">more</a>
           </li>
         </ul>
       </div>
