--- a/angular/views/movie-popup.html
+++ b/angular/views/movie-popup.html
@@ -50,10 +50,13 @@
   <div class="form-group">
     <input type="text" name="poster" id="poster" class="form-control input-lg" placeholder="Poster Link" tabindex="10" ng-model="movie.poster">
   </div>
+  <div class="form-group">
+    <input type="text" name="banner" id="banner" class="form-control input-lg" placeholder="Banner Link" tabindex="11" ng-model="movie.banner">
+  </div>
 </div>
 <div class="modal-footer">
   <div class="col-xs-6 col-md-6">
-    <input value="Cancel" ng-click="cancel()" class="btn btn-primary btn-block btn-lg" tabindex="11">
+    <input value="Cancel" ng-click="cancel()" class="btn btn-primary btn-block btn-lg" tabindex="12">
   </div>
   <div class="col-xs-6 col-md-6"><a href ng-click="addMovie()" class="btn btn-success btn-block btn-lg">Save</a></div>
 </div>
