--- a/angular/views/main.html
+++ b/angular/views/main.html
@@ -16,7 +16,7 @@
           <a href class="dropdown-toggle" data-toggle="dropdown">{{user.username | uppercase}} <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href ng-click="$state.go('index.home.manage')">MANAGE MOVIES</a></li>
-            <li><a href>ACCOUNT INFO</a></li>
+            <!-- <li><a href>ACCOUNT INFO</a></li> -->
             <li><a href ng-click="logOut()">LOGOUT</a></li>
             <!-- <li><a href="single-project.html">SINGLE PROJECT</a></li> -->
           </ul>
